css/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Rubik:wght@300;400;500;600;700&display=swap");

*, ::before, ::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
    scroll-behavior: smooth;
}

html::-webkit-scrollbar {
    width: 1.2rem;
}

html::-webkit-scrollbar-thumb {
    height: 10rem;
    background-color: #ccc;
    border: 3px solid white;
    border-radius: 6px;
}

html::-webkit-scrollbar-track {
    background-color: white;
}

body {
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
    line-height: 1.5;
    font-size: 1.6rem;
    background-color: #f2f2fc;
    -moz-user-select: none !important;
    -webkit-touch-callout: none !important;
    -webkit-user-select: none !important;
    -khtml-user-select: none !important;
    -moz-user-select: none !important;
    -ms-user-select: none !important;
    user-select: none !important;
}

a {
    text-decoration: none;
}

ul {
    list-style: none;
}

h1, h2, h3 {
    color: #302e4d;
}

p {
    color: #504e70;
}

.container {
    max-width: 1130px;
    padding: 0 1.5rem;
    margin: 0 auto;
}

.title-intro {
    display: inline-block;
    font-size: 4rem;
    font-family: "Rubik", sans-serif;
    color: #302e4d;
    font-weight: 700;
    padding-bottom: 1rem;
    margin-bottom: 2rem;
    position: relative;
    border-bottom: 1px solid #ccc;
}

.title-intro::after {
    content: "";
    position: absolute;
    bottom: -0.5px;
    left: 0;
    width: 50%;
    height: 0.8rem;
    transform: translate(50%, 50%);
    background-color: rgba(86, 141, 229, 1);
}

.navbar {
    position: fixed;
    width: 8rem;
    height: 100vh;
    top: 0;
    left: 0;
    z-index: 100;
    text-align: center;
}

.navbar-icon {
    display: none;
    position: fixed;
    z-index: 1500;
    font-size: 3rem;
    top: 3rem;
    right: 3rem;
    color: #302e4d;
}

.navbar-list {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.navbar-item {
    font-size: 2rem;
}

.navbar-item span {
    display: none;
}

.navbar-item i {
    cursor: pointer;
    color: #504e70;
    background-color: #ffff;
    width: 5rem;
    height: 5rem;
    text-align: center;
    line-height: 5rem;
    border-radius: 100%;
    transition: all 0.2s linear;
}

.navbar-item i:hover {
    color: rgba(86, 141, 229, 1);
}

@media screen and (max-width: 1230px) {
    .navbar {
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        z-index: 1000;
        background-color: #f2f2fc;
        transition: all 0.2s linear;
        transform: translateX(-100%);
    }

    .navbar-icon {
        display: block;
    }

    .navbar-list {
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding-left: 2rem;
    }

    .navbar.active {
        transform: translateX(0);
    }

    .navbar-item {
        display: block;
        text-align: left;
    }

    .navbar-item span {
        display: inline-block;
    }

    .navbar-item i {
        margin-bottom: 3rem;
        background-color: #ffff;
        color: #e3e3e3;
        font-size: 2rem;
        width: 4rem;
        height: 4rem;
        line-height: 4rem;
    }

    .navbar-item span {
        margin-left: 2rem;
        color: #504e70;
        font-size: 1.8rem;
        font-weight: 600;
    }
}

.navbar-item.active-color i {
    color: rgba(86, 141, 229, 1);
}

.home {
    height: 70rem;
    position: relative;
}

.home-social {
    margin-top: 1.5rem;
}

.home-social-icon {
    display: inline-block;
    font-size: 1.6rem;
    width: 3.5rem;
    height: 3.5rem;
    color: white;
    border-radius: 100%;
    background-color: rgba(86, 141, 229, 1);
    position: relative;
    transition: all 0.25s linear;
}

.home-social-icon:not(:first-child) {
    margin-left: 1rem;
}

.home-social-icon i {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.home-social-icon:hover {
    transform: scale(1.3);
}

.home-avatar {
    display: inline-block;
    width: 20rem;
    height: 20rem;
    border-radius: 100%;
    border: 1rem solid #ffff;
    transition: 0.5s;
}

.home-avatar img {
    width: 100%;
    height: 100%;
    border-radius: 100%;
    object-fit: cover;
}

.home-content {
    padding: 30px 100px 50px 100px;
    border-radius: 10px;
    box-shadow: 0 0.3px 1px 0.3px rgb(0 0 0 / 0.2%), 0 3px 6px 3px rgb(0 0 0 / 1%), 0 5px 50px 5px rgb(0 0 0 / 3%);
    background-color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.home-title {
    margin-top: 1.5rem;
}

.home-title h1 {
    font-weight: 700;
    font-size: 3rem;
}

.home-title p {
    font-size: 1.4rem;
    font-weight: 500;
}

@media screen and (max-width: 767px) {
    .home-title h1 {
        font-size: 2.5rem;
    }
}

.edu {
    margin-bottom: 5rem;
}

.edu-title {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    transition: 0.5s;
}

.edu-name {
    font-size: 2.4rem;
    transition: 0.5s;
}

.edu-person-infor {
    margin-top: 5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    transition: 0.5s;
}

.edu-skill {
    width: calc(50% - 1rem);
}

.edu-infor {
    width: calc(50% - 1rem);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.edu-infor-item {
    display: inline-block;
    width: calc(50% - 1.5rem);
    margin-top: 1rem;
    padding-bottom: 1rem;
    border-bottom: 1px solid #ccc;
}

.edu-infor-item span {
    color: #302e4d;
    font-weight: 700;
}

.edu-education {
    margin-top: 5rem;
}

.edu-education-content {
    margin-top: 2rem;
}

.edu-education-title {
    font-size: 2.4rem;
}

.edu-education-item {
    box-shadow: 0 1px 2px 1px rgb(0 0 0 / 0.3%), 0 3px 6px 3px rgb(0 0 0 / 1%), 0 5px 50px 5px rgb(0 0 0 / 3%);
    overflow: hidden;
    position: relative;
    background-color: #ffff;
    width: 50%;
    padding-top: 3rem;
    padding-bottom: 3rem;
    padding-left: 5rem;
    padding-right: 2rem;
    border-radius: 1rem;
}

@media screen and (max-width: 767px) {
    .edu-name {
        font-size: 1.6rem;
    }

    .edu-skill {
        width: 100%;
    }

    .edu-infor {
        width: 100%;
    }

    .edu-infor-item {
        width: 100%;
    }

    .edu-education-item {
        width: 100%;
    }
}

.skill-item {
    text-transform: uppercase;
    margin-top: 2rem;
}

.skill-item-top {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.skill-item-name {
    font-weight: 700;
    color: #302e4d;
}

.skill-item-progress {
    width: 100%;
    height: 0.8rem;
    background-color: #e3e3e3;
    position: relative;
    border-radius: 1rem;
}

.skill-item-bars {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    background-color: rgba(86, 141, 229, 1);
    border-radius: 1rem;
    transition: 0.5s;
}

.education-item-time i {
    font-size: 1.8rem;
    color: #504e70;
    margin-right: 2rem;
}

.education-item-time span {
    color: #504e70;
    font-weight: 600;
    font-size: 1.8rem;
}

.education-item-title {
    margin-top: 1rem;
    font-size: 1.8rem;
}

.time-line {
    position: absolute;
    height: 100%;
    width: 2px;
    background-color: rgba(86, 141, 229, 1);
    top: 3rem;
    left: 2.5rem;
}

.time-line::after {
    content: "";
    position: absolute;
    width: 2rem;
    height: 2rem;
    border-radius: 100%;
    background-color: rgba(86, 141, 229, 1);
    top: 0;
    left: 1px;
    transform: translateX(-50%);
}

.project {
    margin-bottom: 5rem;
}

.project a {
    display: inline-block;
}

.project-title {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
}

.project-list {
    margin-top: 5rem;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.project-item {
    box-shadow: 0 1px 2px 1px rgb(0 0 0 / 0.3%), 0 3px 6px 3px rgb(0 0 0 / 1%), 0 5px 50px 5px rgb(0 0 0 / 3%);
    border: 1rem solid #ffff;
    border-radius: 10px;
    height: 35rem;
    margin-bottom: 2rem;
    flex-shrink: 0;
    position: relative;
}

.project-item:hover .project-item-infor {
    transform: scale(1);
}

.project-item video {
    border-radius: 10px;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.project-item-infor {
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    transform: scale(0);
    transition: 0.3s ease-in-out;
}

.project-item-infor h3 {
    color: rgba(86, 141, 229, 1);
    font-size: 2.5rem;
}

.project-item-infor span {
    text-align: center;
    display: inline-block;
    color: white;
    font-size: 2rem;
}

@media screen and (max-width: 767px) {
    .project-item {
        width: 100%;
    }
}

.contact-title {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
}

.contact-infor {
    margin-top: 3rem;
    display: flex;
    justify-content: space-evenly;
}

.contact-infor-item {
    display: inline-flex;
    flex-direction: column;
    align-items: center;
}

.contact-infor-item i {
    font-size: 4rem;
    color: rgba(86, 141, 229, 1);
}

.contact-infor-item h3 {
    margin-top: 3rem;
    font-size: 2rem;
}

.contact-infor-item p {
    font-size: 1.8rem;
    font-weight: 500;
}

.contact-form input {
    font-family: "Montserrat", sans-serif;
    font-size: 1.8rem;
    padding: 1.5rem 2.5rem;
    border-radius: 3rem;
    outline: none;
    border: 1px solid #ccc;
    transition: all 0.2s linear;
}
input[type=submit]{
    background-color: rgba(86, 141, 229, 1);
}
.contact-form input[type=submit] {
    border: 0;
}

.contact-form input:hover {
    box-shadow: 0 1px 2px 1px rgb(86 141 229 / 0.3%), 0 3px 6px 3px rgb(86 141 229 / 1%), 0 5px 50px 5px rgb(86 141 229 / 3%);
}

.contact-form-subject {
    margin-top: 2.5rem;
    width: 100%;
}

.contact-form-message {
    margin-top: 2.5rem;
    width: 100%;
}

.contact-form-submit {
    background-color: rgba(86, 141, 229, 1);
    margin-top: 3rem;
    color: #ffff;
    font-weight: 500;
}

@media screen and (max-width: 767px) {
    .contact-infor {
        flex-direction: column;
    }

    .contact-infor-item {
        margin-bottom: 3rem;
    }

    .contact-infor-item h3 {
        margin-top: 1rem;
    }

    .contact-form-name {
        width: 100%;
        margin-bottom: 3rem;
    }

    .contact-form-email {
        width: 100%;
    }
}

*::-webkit-input-placeholder {
    color: #504e70;
    font-weight: 500;
}
@media (prefers-color-scheme: dark){
    body{
        background-color: #2B2B2B;
    }
    h1, h2, h3, p, .title-intro, span , .skill-item-name, .education-item-time i ,.education-item-time span, #transaction-count, .fa-bars:before, .fa-times-circle, .navbar-list span{
        color: #EEEEEE;
    }
    .edu-education-item, .home-content, .home-avatar, .navbar-list, .navbar-item i{
        background-color: #423F3E;
        border: #423F3E;
    }
    .contact-form input{
        background-color: #423F3E;
        border: none;
        color: #EEEEEE;
    }
    .project-item {
        border: 1rem solid #423F3E;
    }
    ::placeholder {
        color: #EEEEEE;
    }
    input[type=submit]{
        background-color: rgba(86, 141, 229, 1);
    }
    html::-webkit-scrollbar-track {
        background-color: #423F3E;
    }
    html::-webkit-scrollbar-thumb {
        height: 10rem;
        background-color: #ccc;
        border: 3px solid #423F3E;
        border-radius: 6px;
    }
}

